Crash when Lock Object Modes off and switching from Sculpt mode to Object mode #72189

Closed
opened 2019-12-05 09:59:52 +01:00 by Leha · 9 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1060 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.28

Blender Version
Broken: version: 2.82 (sub 3), branch: master (modified), commit date: 2019-12-05 07:14, hash: f4b7d57551

Short description of error
The issue is similar to resolved https://developer.blender.org/T72147 but works in reverse. When your object is in Sculpt mode and you select another object in Object mode Blender crashes.
Yesterday it worked well.

Exact steps for others to reproduce the error

  1. Duplicate default cube
  2. Turn off Lock Object Modes in Edit menu
  3. For one of the cubes switch to the Sculpt mode
  4. Select second cube with Alt+LMB
  5. Crash

test crash.blend

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1060 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.28 **Blender Version** Broken: version: 2.82 (sub 3), branch: master (modified), commit date: 2019-12-05 07:14, hash: `f4b7d57551` **Short description of error** The issue is similar to resolved https://developer.blender.org/T72147 but works in reverse. When your object is in Sculpt mode and you select another object in Object mode Blender crashes. Yesterday it worked well. **Exact steps for others to reproduce the error** 1. Duplicate default cube 2. Turn off Lock Object Modes in Edit menu 3. For one of the cubes switch to the Sculpt mode 4. Select second cube with Alt+LMB 5. Crash [test crash.blend](https://archive.blender.org/developer/F8191160/test_crash.blend)
Author

Added subscriber: @Leha

Added subscriber: @Leha
Author

Tried to build Blender from older commits. Crash occurs even on month ago commits. But it worked fine month ago. Maybe some new library causing this crash? Can someone confirm issue?

Tried to build Blender from older commits. Crash occurs even on month ago commits. But it worked fine month ago. Maybe some new library causing this crash? Can someone confirm issue?
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, checking...

Confirmed, checking...
Member

Added subscribers: @fclem, @Jeroen-Bakker

Added subscribers: @fclem, @Jeroen-Bakker
Member

Will set this to High [since everyone involved should be in Overlay mood, no? :)]

OVERLAY_FramebufferList->overlay_default_fb is NULL

1  GPU_framebuffer_bind                      gpu_framebuffer.c 510  0x8199639 
2  OVERLAY_sculpt_draw                       overlay_sculpt.c  65   0x3818bff 
3  OVERLAY_draw_scene                        overlay_engine.c  441  0x38060f6 
4  drw_engines_draw_scene                    draw_manager.c    1216 0x37b2669 
5  DRW_draw_select_loop                      draw_manager.c    2318 0x37b50f3 
6  view3d_opengl_select                      view3d_view.c     1149 0x3f726dd 
7  mixed_bones_object_selectbuffer           view3d_select.c   1684 0x3f627d8 
8  mixed_bones_object_selectbuffer_extended  view3d_select.c   1783 0x3f62c75 
9  ed_object_select_pick                     view3d_select.c   2061 0x3f637ff 
10 view3d_select_exec                        view3d_select.c   2421 0x3f647e8 
11 view3d_select_invoke                      view3d_select.c   2460 0x3f6491c 
12 wm_operator_invoke                        wm_event_system.c 1441 0x32eab85 
13 wm_handler_operator_call                  wm_event_system.c 2281 0x32ecaf3 
14 wm_handlers_do_keymap_with_keymap_handler wm_event_system.c 2594 0x32ed80e 
15 wm_handlers_do_intern                     wm_event_system.c 2731 0x32ede2a 
16 wm_handlers_do                            wm_event_system.c 2993 0x32eebce 
17 wm_event_do_handlers                      wm_event_system.c 3446 0x32f00a1 
18 WM_main                                   wm.c              417  0x32e31ce 
19 main                                      creator.c         496  0x2d186b6 

CC @Jeroen-Bakker, @fclem

Will set this to High [since everyone involved should be in Overlay mood, no? :)] `OVERLAY_FramebufferList->overlay_default_fb` is NULL ``` 1 GPU_framebuffer_bind gpu_framebuffer.c 510 0x8199639 2 OVERLAY_sculpt_draw overlay_sculpt.c 65 0x3818bff 3 OVERLAY_draw_scene overlay_engine.c 441 0x38060f6 4 drw_engines_draw_scene draw_manager.c 1216 0x37b2669 5 DRW_draw_select_loop draw_manager.c 2318 0x37b50f3 6 view3d_opengl_select view3d_view.c 1149 0x3f726dd 7 mixed_bones_object_selectbuffer view3d_select.c 1684 0x3f627d8 8 mixed_bones_object_selectbuffer_extended view3d_select.c 1783 0x3f62c75 9 ed_object_select_pick view3d_select.c 2061 0x3f637ff 10 view3d_select_exec view3d_select.c 2421 0x3f647e8 11 view3d_select_invoke view3d_select.c 2460 0x3f6491c 12 wm_operator_invoke wm_event_system.c 1441 0x32eab85 13 wm_handler_operator_call wm_event_system.c 2281 0x32ecaf3 14 wm_handlers_do_keymap_with_keymap_handler wm_event_system.c 2594 0x32ed80e 15 wm_handlers_do_intern wm_event_system.c 2731 0x32ede2a 16 wm_handlers_do wm_event_system.c 2993 0x32eebce 17 wm_event_do_handlers wm_event_system.c 3446 0x32f00a1 18 WM_main wm.c 417 0x32e31ce 19 main creator.c 496 0x2d186b6 ``` CC @Jeroen-Bakker, @fclem

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Clément Foucault self-assigned this 2019-12-05 13:01:13 +01:00
Author

Thanks! Amazing!

Thanks! Amazing!

This issue was referenced by d21a8dcae2

This issue was referenced by d21a8dcae295154c71b8c5c6d480d877af5c0b2a
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72189
No description provided.