Overlay Engine: Fix crash in select mode with  Lock Object Modes off

Fixes T72189: Crash when Lock Object Modes off and switching from Sculpt mode to Object mode