source/blender/draw/engines/overlay/overlay_edit_curve.c
@@ -121,7 +121,9 @@ void OVERLAY_edit_curve_draw(OVERLAY_Data *vedata)
   OVERLAY_PassList *psl = vedata->psl;
   OVERLAY_FramebufferList *fbl = vedata->fbl;
 
-  GPU_framebuffer_bind(fbl->overlay_default_fb);
+  if (DRW_state_is_fbo()) {
+    GPU_framebuffer_bind(fbl->overlay_default_fb);
+  }
 
   DRW_draw_pass(psl->edit_curve_wire_ps[0]);
   DRW_draw_pass(psl->edit_curve_wire_ps[1]);
